--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tabler/icons-react": "^2.40.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
