--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint --fix . --ext .ts,.tsx"
   },
   "dependencies": {
     "@octokit/auth-basic": "^1.4.8",
     "@octokit/core": "^5.0.1",
     "@octokit/rest": "^20.0.2",
     "@tabler/icons-react": "^2.40.0",
+    "eslint-config-next": "14.0.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
@@ -22,9 +23,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint": "8.55.0",
+    "eslint-config-standard-with-typescript": "^42.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
