--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --fix . --ext .ts,.tsx"
+    "lint": "next lint",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky"
