--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "kylescudder.co.uk",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
