--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
-  "name": "kylescudder.co.uk",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@area44/astro-shadcn-ui-template",
+  "version": "23.12.26",
+  "description": "An Astro template for building apps.",
+  "author": {
+    "name": "AREA44"
+  },
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "prepare": "husky"
+    "build": "astro build",
+    "dev": "astro dev",
+    "format": "prettier -w . --cache",
+    "preview": "astro preview",
+    "start": "astro dev"
   },
   "dependencies": {
-    "@octokit/auth-basic": "^1.4.8",
-    "@octokit/core": "^6.1.2",
-    "@octokit/rest": "^20.1.0",
-    "@tabler/icons-react": "^3.1.0",
-    "@tsparticles/engine": "^3.3.0",
-    "@tsparticles/react": "^3.0.0",
-    "eslint-config-next": "14.2.8",
-    "next": "14.2.8",
-    "react": "^18",
-    "react-dom": "^18",
-    "typewriter-effect": "^2.21.0"
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@contentful/rich-text-html-renderer": "^16.3.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "astro": "^4.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "contentful": "^10.8.6",
+    "lucide-react": "^0.453.0",
+    "moment-timezone": "^0.5.45",
+    "motion": "^10.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "autoprefixer": "^10",
-    "eslint": "9.3.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.6.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.34.1",
-    "husky": "^9.0.11",
-    "postcss": "^8",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "typescript": "^5.4.3"
+  },
+  "packageManager": "pnpm@8.15.5"
 }
