--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@area44/astro-shadcn-ui-template",
-  "version": "23.12.26",
-  "description": "An Astro template for building apps.",
+  "name": "Kyle Scudder Portfolio",
+  "version": "1.0.0",
+  "description": "My portfolio site written using astro.",
   "author": {
-    "name": "AREA44"
+    "name": "kylescudder"
   },
   "license": "MIT",
   "scripts": {
@@ -20,11 +20,11 @@
     "@contentful/rich-text-html-renderer": "^16.3.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "astro": "^4.5.9",
+    "astro": "^4.16.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "contentful": "^10.8.6",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.454.0",
     "moment-timezone": "^0.5.45",
     "motion": "^10.17.0",
     "react": "^18.2.0",
@@ -39,9 +39,8 @@
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript": "^5.4.3"
-  },
-  "packageManager": "pnpm@8.15.5"
+  }
 }
