--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@astrojs/vercel": "8.0.0",
     "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-slot": "1.1.0",
+    "@tabler/icons-react": "^3.24.0",
     "astro": "5.0.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "lucide-react": "0.465.0",
     "moment-timezone": "0.5.46",
     "motion": "11.13.1",
     "react": "18.3.1",
