--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "clsx": "2.1.1",
     "moment-timezone": "0.5.46",
     "motion": "11.13.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.5.5",
     "tailwindcss": "3.4.16",
@@ -34,8 +34,8 @@
   },
   "devDependencies": {
     "@types/node": "22.10.1",
-    "@types/react": "18.3.13",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.9",
