--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "build": "astro build",
     "dev": "astro dev",
-    "format": "prettier -w . --cache",
     "preview": "astro preview",
-    "start": "astro dev"
+    "start": "astro dev",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/react": "4.0.0",
@@ -36,6 +38,7 @@
     "@types/node": "22.10.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "husky": "^9.1.7",
     "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.9",
