--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-dom": "^19.0.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.6.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
@@ -41,7 +41,7 @@
     "husky": "^9.1.7",
     "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "5.7.3"
   }
 }
