--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "@astrojs/react": "4.1.2",
-    "@astrojs/tailwind": "5.1.4",
     "@astrojs/vercel": "8.0.1",
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-slot": "1.1.1",
     "@tabler/icons-react": "3.28.1",
-    "astro": "5.1.3",
+    "@tailwindcss/vite": "^4.0.1",
+    "astro": "5.2.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "moment-timezone": "0.5.46",
@@ -31,7 +31,7 @@
     "react-dom": "^19.0.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.6.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
