--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-dom": "^19.0.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.6.0",
-    "tailwindcss": "^4.0.1",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
