--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-slot": "1.1.1",
     "@tabler/icons-react": "3.28.1",
-    "@tailwindcss/vite": "^4.0.1",
+    "@tailwindcss/vite": "4.0.1",
     "astro": "5.2.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "moment-timezone": "0.5.46",
     "motion": "11.16.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.6.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "4.0.0",
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "22.10.5",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "husky": "^9.1.7",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "husky": "9.1.7",
     "prettier": "3.4.2",
     "prettier-plugin-astro": "0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "typescript": "5.7.3"
   }
 }
