--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.2.0",
+    "@astrojs/netlify": "6.2.0",
     "@astrojs/react": "4.2.1",
     "@radix-ui/react-dropdown-menu": "2.1.6",
     "@radix-ui/react-slot": "1.1.2",
